adicição da seção footer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__container">
+
+            <h2>Obrigado por acessar o nosso site .</h2>
+            
+        </div>
+    </footer>
 <!-- =========================================================== -->
 
 <script src="./src/js/main.js"></script>
